--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
   
   .jumbotron {
     text-align: center;
-    background-color: transparent;
     color: black;
     border-radius: 0;
     border-bottom: 10px solid black;
@@ -69,3 +68,23 @@ body {
     font-size: 20px;
     transition: all .3s ease-in-out;
   }
+
+  .form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: 2.375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.bg-dark {
+    background-color: black!important;
+}
